# sbxbin-runner

./: .gitignore  Cargo.toml  README.md  config.json
scripts/: cargo_build_no_warnings.sh  cargo_build_static.sh  pack_binary.sh
src/: config.rs  main.rs  redirection.rs
