[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.88"
signal-hook = "0.3.14"
subprocess = "0.2.9"

[profile.release]
opt-level = "z"   # Optimize for size
strip = true      # Automatically strip symbols from the binary
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
